# rl-robotics-takehome

./: .gitignore  README.md  environment-lock.yml  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
checkpoints/custom/NoisyGoalReacher-v0__train_custom_ppo__1__1784437680/: train_custom_ppo.cleanrl_model
checkpoints/custom/NoisyGoalReacher-v0__train_custom_ppo__dense__12__1784439909/: train_custom_ppo.cleanrl_model
checkpoints/custom/NoisyGoalReacher-v0__train_custom_ppo__dense__12__1784455377/: train_custom_ppo.cleanrl_model
checkpoints/custom/NoisyGoalReacher-v0__train_custom_ppo__dense__1300__1784441544/: train_custom_ppo.cleanrl_model
checkpoints/custom/NoisyGoalReacher-v0__train_custom_ppo__dense__1300__1784456718/: train_custom_ppo.cleanrl_model
checkpoints/custom/NoisyGoalReacher-v0__train_custom_ppo__dense__1__1784454216/: train_custom_ppo.cleanrl_model
configs/: part0_commands.txt  part1_commands.txt  part2_commands.txt
results/part0/ppo_reacher_seed_0/: final_evaluation.json  learning_curve.csv  (+1 more)
scripts/: evaluate_part0.py  smoke_test_reacher.py
scripts/part0/: plot_curve.py  record_video.py  render_random_reacher.py  train_sb3.py
scripts/part1/: check_custom_env.py  check_noisy_goal_reacher.py
scripts/part2/: play.py  plot_comparison.py  plot_curve_json.py  plot_noise_sensitivity.py  plot_reward_type_comparison.py  train_custom_ppo.py  train_sb3.py
src/noisy_goal_reacher/: __init__.py  env.py
tests/part1/: test_noisy_goal_reacher.py
tests/part2/: test_compute_gae.py
videos/part0/: ppo_reacher_seed_0.webm
(+139 files in other folders)
